# KEEL

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  TASKS.md  WORKLOG.md  pyproject.toml
.claude/: settings.json  statusline.py
.claude-plugin/: marketplace.json
.claude/commands/keel/: advance.md  checkpoint.md  companion.md  done.md  drift.md  (+4 more)
.claude/hooks/: keel_notify.py  keel_preflight.py  keel_scope_guard.py  keel_ui_context.py
.codex/: config.toml
.keel/: done-gate.yaml  glossary.yaml
.keel/prompts/: drift-checker.md  implementer.md  planner.md  reconciler.md  researcher.md  reviewer.md
.keel/session/: alerts.yaml  checkpoints.yaml  companion-heartbeat.yaml  companion.yaml  current-brief.md  current.yaml  drift-dismissals.yaml  drift-memory.yaml
.keel/templates/: anti-example.md  decision.md  delta.md  example.md  goal.md  plan.md  question.md  requirement.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  QUALITY.md  TECH.md
.serena/: project.yml
docs/: AGENT_INTEGRATION.md  CLAUDE_CODE_INTEGRATION.md
scripts/: install_agent_assets.py  install_claude_assets.py
src/keel/: __init__.py  __main__.py
tests/: conftest.py  test_bridge.py  test_claude_plugin.py  test_claude_ui.py  test_cli_start.py  test_companion.py  test_core.py  test_drift.py  test_drift_dismiss.py  test_install_agents_cli.py  test_installer.py  test_planner_validators.py  test_recover.py  test_research.py  test_scan.py  test_services.py  test_session.py  test_watch.py
(+613 files in other folders)
